maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:25: error: ')' expected but ';' found.
        setIndication(x-1,y,Math.min(k+1,getIndication(x-1,y));Tx(1)=x-1;Ty(1)=y
                                                              ^